--- a/innsight-frontend/src/locales/en.json
+++ b/innsight-frontend/src/locales/en.json
@@ -41,6 +41,11 @@
       "logout": "Logout",
       "dark_mode": "Dark Mode",
       "light_mode": "Light Mode"
-    }
+    },
+    "notFound": {
+        "title": "Page Not Found",
+        "message": "The page you are looking for doesn't exist or has been moved.",
+        "returnHome": "Return Home"
+      }
   }
   
