--- a/innsight-frontend/src/locales/en.json
+++ b/innsight-frontend/src/locales/en.json
@@ -1,52 +1,59 @@
 {
-    "app": {
-      "name": "InnSight"
-    },
-    "welcome": {
-      "title": "Welcome to InnSight",
-      "subtitle": "Your personal mental wellness companion.",
-      "login_with": "Login with",
-      "language": "Language",
-      "theme": "Theme",
-      "what_is_innsight": "Your daily companion for mental well-being"
-    },
-    "dashboard": {
-      "today": "Today is {{date}}",
-      "daily_intention": "Daily Intention",
-      "edit_intention": "Edit Intention",
-      "set_intention": "Set your intention for today...",
-      "log_mood": "Log Mood",
-      "breathing_exercise": "Breathing Exercise",
-      "previous_entries": "Previous Entries"
-    },
-    "mood": {
-      "how_feeling": "How are you feeling?",
-      "select_emotions": "Select up to 3 emotions",
-      "why_feeling": "Why do you feel this way?",
-      "save": "Save",
-      "snooze": "Snooze",
-      "emoji_positive": "Positive",
-      "emoji_neutral": "Neutral",
-      "emoji_negative": "Negative"
-    },
-    "breathe": {
-      "start": "Start Breathing Exercise",
-      "inhale": "Inhale",
-      "hold": "Hold",
-      "exhale": "Exhale",
-      "done": "Done",
-      "relax_message": "Relax and follow the rhythm."
-    },
-    "common": {
-      "loading": "Loading...",
-      "logout": "Logout",
-      "dark_mode": "Dark Mode",
-      "light_mode": "Light Mode"
-    },
-    "notFound": {
-        "title": "Page Not Found",
-        "message": "The page you are looking for doesn't exist or has been moved.",
-        "returnHome": "Return Home"
-      }
+  "app": {
+    "name": "InnSight"
+  },
+  "welcome": {
+    "title": "Welcome to InnSight",
+    "subtitle": "Your personal mental wellness companion.",
+    "login_with": "Login with",
+    "language": "Language",
+    "theme": "Theme",
+    "what_is_innsight": "Your daily companion for mental well-being"
+  },
+  "dashboard": {
+    "greeting": "Hello, {{name}}!",
+    "today": "Today is {{date}}",
+    "quote_heading": "Today’s Reflection",
+    "streak_days": "{{count}} days in a row",
+    "daily_intention": "Daily Intention",
+    "edit_intention": "Edit Intention",
+    "set_intention": "Set your intention for today...",
+    "log_mood": "Log Mood",
+    "breathing_exercise": "Breathing Exercise",
+    "previous_entries": "Previous Entries"
+  },
+  "mood": {
+    "how_feeling": "How are you feeling?",
+    "select_emotions": "Select up to 3 emotions",
+    "why_feeling": "Why do you feel this way?",
+    "save": "Save",
+    "snooze": "Snooze",
+    "emoji_positive": "Positive",
+    "emoji_neutral": "Neutral",
+    "emoji_negative": "Negative"
+  },
+  "breathe": {
+    "start": "Start Breathing Exercise",
+    "inhale": "Inhale",
+    "hold": "Hold",
+    "exhale": "Exhale",
+    "done": "Done",
+    "relax_message": "Relax and follow the rhythm."
+  },
+  "common": {
+    "loading": "Loading...",
+    "save": "Save",
+    "logout": "Logout",
+    "dark_mode": "Dark Mode",
+    "light_mode": "Light Mode"
+  },
+  "notFound": {
+    "title": "Page Not Found",
+    "message": "The page you are looking for doesn't exist or has been moved.",
+    "returnHome": "Return Home"
+  },
+  "errors": {
+    "save_failed": "Failed to save. Try again.",
+    "fetch_entries": "Couldn’t load your entries."
   }
-  
+}
