--- a/innsight-frontend/src/locales/pt.json
+++ b/innsight-frontend/src/locales/pt.json
@@ -1,52 +1,59 @@
 {
-    "app": {
-      "name": "InnSight"
-    },
-    "welcome": {
-      "title": "Bem-vindo ao InnSight",
-      "subtitle": "Seu companheiro pessoal de bem-estar mental.",
-      "login_with": "Entrar com",
-      "language": "Idioma",
-      "theme": "Tema",
-      "what_is_innsight": "Seu companheiro diário para o bem-estar mental"
-    },
-    "dashboard": {
-      "today": "Hoje é {{date}}",
-      "daily_intention": "Intenção Diária",
-      "edit_intention": "Editar Intenção",
-      "set_intention": "Defina sua intenção para hoje...",
-      "log_mood": "Registrar Humor",
-      "breathing_exercise": "Exercício de Respiração",
-      "previous_entries": "Entradas Anteriores"
-    },
-    "mood": {
-      "how_feeling": "Como você está se sentindo?",
-      "select_emotions": "Selecione até 3 emoções",
-      "why_feeling": "Por que você se sente assim?",
-      "save": "Salvar",
-      "snooze": "Adiar",
-      "emoji_positive": "Positivas",
-      "emoji_neutral": "Neutras",
-      "emoji_negative": "Negativas"
-    },
-    "breathe": {
-      "start": "Iniciar Exercício de Respiração",
-      "inhale": "Inspire",
-      "hold": "Segure",
-      "exhale": "Expire",
-      "done": "Concluído",
-      "relax_message": "Relaxe e siga o ritmo."
-    },
-    "common": {
-      "loading": "Carregando...",
-      "logout": "Sair",
-      "dark_mode": "Modo Escuro",
-      "light_mode": "Modo Claro"
-    },
-    "notFound": {
-      "title": "Página Não Encontrada",
-      "message": "A página que você está procurando não existe ou foi movida.",
-      "returnHome": "Voltar ao Início"
-    }
+  "app": {
+    "name": "InnSight"
+  },
+  "welcome": {
+    "title": "Bem-vindo ao InnSight",
+    "subtitle": "Seu companheiro pessoal de bem-estar mental.",
+    "login_with": "Entrar com",
+    "language": "Idioma",
+    "theme": "Tema",
+    "what_is_innsight": "Seu companheiro diário para o bem-estar mental"
+  },
+  "dashboard": {
+    "greeting": "Olá, {{name}}!",
+    "today": "Hoje é {{date}}",
+    "quote_heading": "Reflexão de hoje",
+    "streak_days": "{{count}} dias seguidos",
+    "daily_intention": "Intenção Diária",
+    "edit_intention": "Editar Intenção",
+    "set_intention": "Defina sua intenção para hoje...",
+    "log_mood": "Registrar Humor",
+    "breathing_exercise": "Exercício de Respiração",
+    "previous_entries": "Entradas Anteriores"
+  },
+  "mood": {
+    "how_feeling": "Como você está se sentindo?",
+    "select_emotions": "Selecione até 3 emoções",
+    "why_feeling": "Por que você se sente assim?",
+    "save": "Salvar",
+    "snooze": "Adiar",
+    "emoji_positive": "Positivas",
+    "emoji_neutral": "Neutras",
+    "emoji_negative": "Negativas"
+  },
+  "breathe": {
+    "start": "Iniciar Exercício de Respiração",
+    "inhale": "Inspire",
+    "hold": "Segure",
+    "exhale": "Expire",
+    "done": "Concluído",
+    "relax_message": "Relaxe e siga o ritmo."
+  },
+  "common": {
+    "loading": "Carregando...",
+    "save": "Salvar",
+    "logout": "Sair",
+    "dark_mode": "Modo Escuro",
+    "light_mode": "Modo Claro"
+  },
+  "notFound": {
+    "title": "Página Não Encontrada",
+    "message": "A página que você está procurando não existe ou foi movida.",
+    "returnHome": "Voltar ao Início"
+  },
+  "errors": {
+    "save_failed": "Falha ao salvar. Tente novamente.",
+    "fetch_entries": "Não foi possível carregar suas entradas."
   }
-  
+}
